--- a/index.html
+++ b/index.html
@@ -358,10 +358,12 @@
         </button>
       </div>
       <p id="price-warning" class="text-danger mt-2"></p>
-      <h4 class="mt-3">prix : <span id="cart-total">0.00€</span></h4>
-      <h4>total</h4>
+      <h4 class="mt-3">Prix : <span id="cart-total">0.00€</span></h4>
       <h3 class="mt-4">Panier de la Commande</h3>
       <ul id="cart-list" class="list-group"></ul>
+      <h4 class="mt-3">
+        Total du pannier :<span id="cart-total-commande">0.00€</span>
+      </h4>
       <button id="validate-order-btn" class="btn btn-success w-100 mt-2">
         Valider la Commande
       </button>
